--- a/style.css
+++ b/style.css
@@ -2,15 +2,17 @@
 
 /* ROOT VARIABLES */
 :root {
-  --color-primary: var(#7380ec);
-  --color-danger: var(#ff7782);
-  --color-success: var(#ffbb55);
-  --color-white: #fff;
-  --color-info-dark: #7d8da1;
-  --color-info-light: #dce1eb;
+  --color-primary: #373108;
+  --color-danger: #090000;
+  --color-success: #41f1b6;
+  --color-warning: #ffbb55;
+  --color-white: #ffffff;
+  --color-info-dark: #150d02;
+  --color-info-light: #2e2706;
   --color-dark: #363949;
   --color-light: rgba(132, 139, 200, 0.18);
   --color-primary-variant: #677483;
+  --color-dark-variant: #677483;
   --color-background: #f6f6f9;
 
   --card-border-radius: 2rem;
@@ -28,7 +30,7 @@
   margin: 0;
   padding: 0;
   outline: 0;
-  appearance: 0;
+  appearance: none;
   border: 0;
   text-decoration: none;
   list-style: none;
@@ -40,7 +42,7 @@ html {
 }
 
 body {
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
   font-family: poppins, sans-serif;
   font-size: 0.88rem;
@@ -72,11 +74,19 @@ h1 {
 }
 
 h2 {
+  font-size: 1.4rem;
+}
+
+h3 {
   font-size: 0.87rem;
 }
 
 h4 {
   font-size: 0.8rem;
+}
+
+h5 {
+  font-size: 0.77rem;
 }
 
 small {
@@ -95,7 +105,7 @@ small {
 }
 
 p {
-  color: var(--color-dark);
+  color: var(--color-dark-variant);
 }
 
 b {
@@ -119,4 +129,98 @@ b {
 }
 
 aside {
+  height: 100vh;
+  /* background: gray; */
+}
+
+aside .top {
+  background: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.4rem;
+}
+
+aside .logo {
+  display: flex;
+  gap: 0.8rem;
+}
+
+aside .logo img {
+  width: 2rem;
+  height: 2rem;
+}
+
+aside .close {
+  display: none;
+}
+
+/* SIDEBAR */
+
+aside .sidebar {
+  display: flex;
+  flex-direction: column;
+  height: 86vh;
+  position: relative;
+  top: 3rem;
+}
+
+aside h3 {
+  font-weight: 500;
+}
+
+aside .sidebar a {
+  display: flex;
+  color: var(--color-info-dark);
+  margin-left: 2rem;
+  gap: 1rem;
+  align-items: center;
+  position: relative;
+  height: 3.7rem;
+  transition: all 300ms ease;
+}
+
+aside .sidebar a span {
+  font-size: 1.6rem;
+  transition: all 300ms ease;
+}
+
+aside .sidebar a:last-child {
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+}
+
+aside .sidebar a.active {
+  background: var(--color-light);
+  color: var(--color-primary);
+  margin-left: 0;
+}
+
+aside .sidebar a.active::before {
+  content: "";
+  width: 6px;
+  height: 100%;
+  background: var(--color-primary);
+}
+
+aside .sidebar a.active span {
+  color: var(--color-primary);
+  margin-left: calc(1rem - 3px);
+}
+
+aside .sidebar a:hover {
+  color: var(--color-primary);
+}
+
+aside .sidebar a:hover span {
+  margin-left: 1rem;
+}
+
+aside .sidebar .message-count {
+  background: var(--color-danger);
+  color: var(--color-white);
+  padding: 2px 10px;
+  font-size: 11px;
+  border-radius: var(--border-radius-1);
 }
